--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "shuffle a folder of nft images and their respective metadata",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "updater": "node metadataEditor.js"
   },
   "author": "",
   "license": "ISC"
